# domains/identity/users/http.go
@@ -38,6 +38,7 @@ func (h *Handler) Mount(r chi.Router) {
 	r.Get("/users", h.list)
 	r.Get("/users/deleted", h.listDeleted)
 	r.Post("/users", h.create)
+	r.Post("/users/bulk", h.bulkCreate)
 	r.Get("/users/{id}", h.get)
 	r.Patch("/users/{id}", h.update)
 	r.Delete("/users/{id}", h.delete)
